--- a/Rock Paper Scissors/index.html
+++ b/Rock Paper Scissors/index.html
@@ -6,6 +6,15 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <div>
+        ROCK PAPER SCISSORS <br> <br>
+        Choose your weapon <br>
+        <div><p id="playerScore">Player: 0</p></div>
+        <div><p id="computerScore">Computer: 0</p></div>
+    </div>
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
     <script src="javascript.js"></script>
 </body>
 </html>
