--- a/calculator/index.html
+++ b/calculator/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <div class = "calculator-container">
-        <div id="display">
-            1
+        <div class = "dis">
+            <div id="display">‎ </div>
+            <div id="cur-display">0</div>
         </div>
         <div>
             <button class="inline-button">clear</button>
@@ -19,25 +20,25 @@
             <button class="inline-button" data-number>7</button>
             <button class="inline-button" data-number>8</button>
             <button class="inline-button" data-number>9</button>
-            <button class="inline-button" data-number>÷</button>
+            <button class="inline-sign" data-number>÷</button>
         </div>
         <div>
             <button class="inline-button" data-number>5</button>
             <button class="inline-button" data-number>6</button>
             <button class="inline-button" data-number>4</button>
-            <button class="inline-button" data-number>×</button>
+            <button class="inline-sign" data-number>×</button>
         </div>
         <div>
             <button class="inline-button" data-number>1</button>
             <button class="inline-button" data-number>2</button>
             <button class="inline-button" data-number>3</button>
-            <button class="inline-button" data-number>-</button>
+            <button class="inline-sign" data-number>-</button>
         </div>
         <div>
             <button class="inline-button" data-number>.</button>
             <button class="inline-button" data-number>0</button>
-            <button class="inline-button" data-number>=</button>
-            <button class="inline-button" data-number>+</button>  
+            <button class="inline-sign" data-number>=</button>
+            <button class="inline-sign" data-number>+</button>  
         </div>
     </div>
     <script src = "main.js"></script>
