--- a/calculator/index.html
+++ b/calculator/index.html
@@ -13,9 +13,9 @@
             <div id="cur-display">0</div>
         </div>
         <div>
-            <button class="inline-button">clear</button>
+            <button class="inline-sign">clear</button>
             <button class="inline-button">delete</button>
-        </div>
+        </div>  
         <div>
             <button class="inline-button" data-number>7</button>
             <button class="inline-button" data-number>8</button>
