--- a/calculator/index.html
+++ b/calculator/index.html
@@ -14,7 +14,7 @@
         </div>
         <div>
             <button class="inline-sign">clear</button>
-            <button class="inline-button">delete</button>
+            <button class="inline-sign">delete</button>
         </div>  
         <div>
             <button class="inline-button" data-number>7</button>
@@ -37,7 +37,7 @@
         <div>
             <button class="inline-button" data-number>.</button>
             <button class="inline-button" data-number>0</button>
-            <button class="inline-sign" data-number>=</button>
+            <button class="inline-button" data-number>=</button>
             <button class="inline-sign" data-number>+</button>  
         </div>
     </div>
